# Resonance

./: .gitignore  AGENTS.md  AUDIT.md  README.md  config.toml  pyproject.toml  requirements.txt  resonance_blind_spend_existing_run.ps1  resonance_latency_experiment_driver.ps1  resonance_latency_experiment_runbook.md  run_local.py
.streamlit/: config.toml
docs/: EBAY_API_PROBE.md  EBAY_API_PROBE_RUNBOOK.md  NBER_BENCHMARK_AUDIT.md  OFFERLAB.md  REVIEW_PATCH_0.4.0.md  SELF_FUNDED_EXPERIMENT.md  STRESS_TEST.md  TRANSFER_RESULTS.md  analysis_contract.md  scientific_loop.md
examples/: first_research_session.py
reports/: ebay_production_feasibility.json  ebay_sandbox_role_probe.json  nber_full_normalization_summary.json  nber_wave1_100k_check_transcript.json  offerlab_benchmark_v1.json
resonance/: __init__.py  analyze_pair.py  audit.py  collector.py  config.py  dashboard.py  notify.py  personal.py  public_collector.py  public_health.py  public_series.py  scan.py  seed_demo.py  storage.py  synthetic.py  time_utils.py  watch.py  weather.py
scripts/: benchmark_nber_io.py
tests/: conftest.py  test_alignment.py  test_analysis_contracts.py  test_analysis_service.py  test_analysis_validation.py  test_analyze_pair.py  test_audit.py  test_candidates.py  test_causal_and_stress.py  test_collector.py  test_config.py  test_correlation.py  test_dashboard_findings.py  test_data_source_registry.py  test_ebay_api_http_client.py  test_ebay_api_probe.py  test_eia_grid.py  test_experiments_discovery.py  test_false_positive_torture.py  test_finding_card.py  test_integrity_hardening.py  (+27 more)
(+215 files in other folders)
