[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "behavior-discovery-lab"
version = "0.4.0"
description = "Closed-loop behavioral hypothesis discovery infrastructure."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Behavior Discovery Lab" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
behavior-lab = "behavior_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
